duicontrolpanel (0.7.7~unreleased) unstable; urgency=low

  * Increased version number
  * Fixes: NB#161540 -  System-settings application is crashing after tapping 
    on "Language & Region"

 -- David Kedves <dkedves@blumsoft.eu>  Mon, 22 Mar 2010 11:55:58 +0100

duicontrolpanel (0.7.6) unstable; urgency=low

  * Fixes: NB#161217 - Two instance launches when tapped in quick
    succession...
  * Fixes: NB#148951 - Back button has missleading behaviour

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 19 Mar 2010 16:36:33 +0100

duicontrolpanel (0.7.5) unstable; urgency=low

  * Fixes NB#160780 - Signal connection error in duicontrolpanel
  * Fixes 161074 - Duicontrolpanel applet translations loaded twice
  * Fixes: NB#160864 - Unable to access contents within System Settings
  * Fixes: NB#159646 - Debug messages shall be disabled by default

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 19 Mar 2010 13:54:26 +0100

duicontrolpanel (0.7.4) unstable; urgency=low

  * most used reload

 -- Laszlo Gal <laszlo.gal@blumsoft.eu>  Tue, 16 Mar 2010 17:43:40 +0100

duicontrolpanel (0.7.3) unstable; urgency=low

  * Fixes: NB#156027 DcpAppletIf leaks memory

 -- Viktor Nagy <viktor.nagy@blumsoft.eu>  Fri, 12 Mar 2010 10:55:10 +0100

duicontrolpanel (0.7.2) unstable; urgency=low

  * Fixes NB#159307 - DuiControlpanel page animation is not right
  * updated ui according to spec changes (category buttons on main page, etc)

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 10 Mar 2010 13:00:27 +0100

duicontrolpanel (0.7.1) unstable; urgency=low

  [ David Kedves ]
  * Fix for debian/control

  [ Robert Manner ]
  * Fixes NB#156748: could not define first line value for brief in
    applet for dcp

  [ Laszlo Pere ]
  * Fixes NB#159299: Duicontrolpanel does not pop-up on a dbus signal
  * Fixes NB#149492: Phone network settings view cannot be opened from Status 
    indicator menu

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 03 Mar 2010 11:37:25 +0100
