@@ -30,7 +30,7 @@ DcpAppletDb::DcpAppletDb (
         const QString   &pathName,
         const QString   &nameFilter) : d_ptr(new DcpAppletDbPrivate())
 {
-    if (!pathName.isEmpty()) 
+    if (!pathName.isEmpty())
         addFiles (pathName, nameFilter);
 }
 
@@ -52,17 +52,6 @@ DcpAppletDb::instance (
     if (!DcpAppletDbPrivate::sm_Instance) {
         DcpAppletDbPrivate::sm_Instance = new DcpAppletDb (
                 pathName, nameFilter);
-        /*
-         * When we created the instance we force to load the applet
-         * translations. We need these because some data in the *.desktop files
-         * actually localized and the brief will also return localized UI
-         * strings.
-         */
-        DuiLocale       locale;
-        DcpRetranslator retranslator;
-
-        retranslator.loadAppletTranslations (locale);
-        DuiLocale::setDefault (locale);
     }
 
     return DcpAppletDbPrivate::sm_Instance;
