@@ -1,10 +1,14 @@
 duicontrolpanel (0.7.7~unreleased) unstable; urgency=low
 
+  [ David Kedves ]
   * Increased version number
   * Fixes: NB#161540 -  System-settings application is crashing after tapping 
     on "Language & Region"
 
- -- David Kedves <dkedves@blumsoft.eu>  Mon, 22 Mar 2010 11:55:58 +0100
+  [ Robert Manner ]
+  * Optimized applet translation loading
+
+ -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 23 Mar 2010 16:01:21 +0100
 
 duicontrolpanel (0.7.6) unstable; urgency=low
 
